--- a/index.html
+++ b/index.html
@@ -7,13 +7,34 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&display=swap" rel="stylesheet">
     <script src="https://unpkg.com/vue"></script>
 </head>
-    <body>
-    <div id="app">
-        <div class="panel scores">1</div>
-        <div class="panel result">2</div>
-        <div class="panel buttons">3</div>
-        <div class="panel logs">4</div>
+<body>
+<div id="app">
+    <div class="panel scores">
+        <div class="score">
+            <h1>Player</h1>
+            <div class="life-bar">
+                <div class="life"
+                     :class="{danger: playerLife < 20}"
+                     :style="{width: playerLife + '%'}"
+                ></div>
+            </div>
+            <div> {{ playerLife }}%</div>
+        </div>
+        <div class="score">
+            <h1>Monster</h1>
+            <div class="life-bar">
+                <div class="life"
+                     :class="{danger: monsterLife < 20}"
+                     :style="{width: monsterLife + '%'}"
+                ></div>
+            </div>
+            <div> {{ monsterLife }}%</div>
+        </div>
     </div>
-    <script src="app.js"></script>
-    </body>
+    <div class="panel result">2</div>
+    <div class="panel buttons">3</div>
+    <div class="panel logs">4</div>
+</div>
+<script src="app.js"></script>
+</body>
 </html>
