--- a/index.html
+++ b/index.html
@@ -31,8 +31,20 @@
             <div> {{ monsterLife }}%</div>
         </div>
     </div>
-    <div class="panel result">2</div>
-    <div class="panel buttons">3</div>
+    <div v-if="hasResult" class="panel result">
+        <div v-if="monsterLife == 0" class="win">Você ganhou! :)</div>
+        <div v-else class="lose">Você perdeu! :(</div>
+    </div>
+    <div class="panel buttons">
+        <template v-if="running">
+
+            <button class="btn attack">Ataque</button>
+            <button class="btn especial-attack">Ataque Especial</button>
+            <button class="btn heal">Curar</button>
+            <button class="btn give-up">Desistir</button>
+        </template>
+        <button v-else class="btn new-game">Iniciar Jogo</button>
+    </div>
     <div class="panel logs">4</div>
 </div>
 <script src="app.js"></script>
